--- a/pages/galeriasym.html
+++ b/pages/galeriasym.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galería de Eventos - Salsa y Miga</title>
-    <!-- Enlace a estilos CSS -->
-    <link rel="stylesheet" href="../recursos/nav.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="../../git/recursos/footer.css">
+    <link rel="stylesheet" href="../../git/recursos/footer-responsive.css">
+
+    <link rel="stylesheet" href="../../git/recursos/nav.css">
+    <link rel="stylesheet" href="../../git/recursos/nav-responsive.css">
+
+    <!--Links externos-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Yuji+Boku&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
 <link rel="stylesheet" href="../styles/galeria-style.css">  
 
 </head>
