--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,16 +1,22 @@
-"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros - Salsa y Miga</title>
     <link rel="stylesheet" href="../styles/nosotros-styles.css">
-    <link rel="stylesheet" href="../recursos/nav.css">
+    
+    <link rel="stylesheet" href="../../git/recursos/footer.css">
+    <link rel="stylesheet" href="../../git/recursos/footer-responsive.css">
+
+    <link rel="stylesheet" href="../../git/recursos/nav.css">
+    <link rel="stylesheet" href="../../git/recursos/nav-responsive.css">
+
+    <!--Links externos-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Yuji+Boku&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
+    </head>
     <body>
 <!-- Header -->
 
