--- a/pages/socios.html
+++ b/pages/socios.html
@@ -6,7 +6,16 @@
   <meta name="description" content="Únete al programa de socios de Salsa y Miga y disfruta de exclusivos descuentos en panadería, pizzería, eventos y mucho más.">
   <meta name="keywords" content="socios, descuentos, panadería, pizzería, eventos, reservas anticipadas">
   <title>Socios Exclusivos - Salsa y Miga</title>
-  <link rel="stylesheet" href="../styles/socios-styles.css">
+  
+  <link rel="stylesheet" href="../../git/recursos/footer.css">
+    <link rel="stylesheet" href="../../git/recursos/footer-responsive.css">
+
+    <link rel="stylesheet" href="../../git/recursos/nav.css">
+    <link rel="stylesheet" href="../../git/recursos/nav-responsive.css">
+  <!--Links externos-->
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Yuji+Boku&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH">
   <link rel="stylesheet" href="../recursos/nav.css">
 </head>
 <body>
