--- a/pages/menu.html
+++ b/pages/menu.html
@@ -46,8 +46,8 @@
   <div class="menu">
     <!-- Sección de Pizzas Salsa y Miga -->
     <section class="seccion">
-      <h2>Pizzas Salsa y Miga</h2>
-      <h8>Nuestra selección de Pizzas que tenemos para tí</h8>
+      <h2>Menú de nuestras Pizzas Salsa y Miga</h2>
+      <h6>Nuestra selección de Pizzas que tenemos para tí</h6>
       <h3></h3>
       <div class="pizza-container">
         <div class="pizza-item vegetariana">
@@ -143,12 +143,11 @@
           <div class="footer-column">
             <h3>Enlaces rápidos</h3>
             <ul>
-              <li><a href="#inicio">Inicio</a></li>
-              <li><a href="#servicios">Servicios</a></li>
-              <li><a href="#planes">Planes</a></li>
-              <li><a href="#nosotros">Nosotros</a></li>
-              <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-              <li><a href="pages/blog.html">Blog</a></li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="services.html">Servicios</a></li>
+              <li><a href="nosotros.html">Nosotros</a></li>
+              <li><a href="cotizaciones.html">Cotizaciones</a></li>
+              <li><a href="menu.html">Menú</a></li>
             </ul>
           </div>
           <!-- Contacto -->
@@ -319,12 +318,11 @@
       <div class="footer-column">
         <h3>Enlaces rápidos</h3>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#planes">Planes</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="services.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="cotizaciones.html">Cotizaciones</a></li>
+          <li><a href="menu.html">Menú</a></li>
         </ul>
       </div>
       <!-- Contacto -->
