--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -148,12 +148,11 @@
           <div class="footer-column">
             <h3>Enlaces rápidos</h3>
             <ul>
-              <li><a href="#inicio">Inicio</a></li>
-              <li><a href="#servicios">Servicios</a></li>
-              <li><a href="#planes">Planes</a></li>
-              <li><a href="#nosotros">Nosotros</a></li>
-              <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-              <li><a href="pages/blog.html">Blog</a></li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="services.html">Servicios</a></li>
+              <li><a href="nosotros.html">Nosotros</a></li>
+              <li><a href="cotizaciones.html">Cotizaciones</a></li>
+              <li><a href="menu.html">Menú</a></li>
             </ul>
           </div>
           <!-- Contacto -->
@@ -301,12 +300,11 @@
       <div class="footer-column">
         <h3>Enlaces rápidos</h3>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#planes">Planes</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="services.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="cotizaciones.html">Cotizaciones</a></li>
+          <li><a href="menu.html">Menú</a></li>
         </ul>
       </div>
       <!-- Contacto -->
