--- a/pages/services.html
+++ b/pages/services.html
@@ -132,7 +132,7 @@
         <p>Tu evento con 60 pizzas Salsa y Miga y 30 pizzas Premium. Selecciona 5 opciones de pizzas clásicas (saldrán 10 de cada una) y 3 variedades premium (saldrán 10 de cada una).</p>
         <button class="btn-cotizar" onclick="openModal()">Pack 90 S&M | $9.300 (S/iva)</button>
       <div class="service-buttons">
-        <a href="https://wa.me/56912345678?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
+        <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
       </div>
   
@@ -143,7 +143,7 @@
         <p>Tu evento con 30 pizzas Salsa y Miga. Menú: Capresse (Mozzarella, Pesto, Albahaca, Selección Cherry), Pepperoni (Mozzarella, American Pepperoni, Aceitunas), Osornina (Mozzarella, Rúcula, Prosciutto, Aceite de oliva CHEF, Queso Parmesano)</p>
         <button class="btn-cotizar" onclick="openModal()">Pack 30 Classic | $9.300 (S/iva)</button>
       <div class="service-buttons">
-        <a href="https://wa.me/56912345678?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
+        <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
       </div>
   
@@ -268,12 +268,11 @@
           <div class="footer-column">
             <h3>Enlaces rápidos</h3>
             <ul>
-              <li><a href="#inicio">Inicio</a></li>
-              <li><a href="#servicios">Servicios</a></li>
-              <li><a href="#planes">Planes</a></li>
-              <li><a href="#nosotros">Nosotros</a></li>
-              <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-              <li><a href="pages/blog.html">Blog</a></li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="services.html">Servicios</a></li>
+              <li><a href="nosotros.html">Nosotros</a></li>
+              <li><a href="cotizaciones.html">Cotizaciones</a></li>
+              <li><a href="menu.html">Menú</a></li>
             </ul>
           </div>
           <!-- Contacto -->
@@ -438,7 +437,7 @@
             <p>Tu evento con 60 pizzas Salsa y Miga y 30 pizzas Premium. Selecciona 5 opciones de pizzas clásicas (saldrán 10 de cada una) y 3 variedades premium (saldrán 10 de cada una).</p>
             <button class="btn-cotizar" onclick="openModal()">Pack 90 S&M | $9.300 (S/iva)</button>
           <div class="service-buttons">
-            <a href="https://wa.me/56912345678?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
+            <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
         </div>
           </div>
       
@@ -449,7 +448,7 @@
             <p>Tu evento con 30 pizzas Salsa y Miga. Menú: Capresse (Mozzarella, Pesto, Albahaca, Selección Cherry), Pepperoni (Mozzarella, American Pepperoni, Aceitunas), Osornina (Mozzarella, Rúcula, Prosciutto, Aceite de oliva CHEF, Queso Parmesano)</p>
             <button class="btn-cotizar" onclick="openModal()">Pack 30 Classic | $9.300 (S/iva)</button>
           <div class="service-buttons">
-            <a href="https://wa.me/56912345678?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
+            <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
         </div>
           </div>
       
@@ -617,12 +616,11 @@
       <div class="footer-column">
         <h3>Enlaces rápidos</h3>
         <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#servicios">Servicios</a></li>
-          <li><a href="#planes">Planes</a></li>
-          <li><a href="#nosotros">Nosotros</a></li>
-          <li><a href="pages/cotizaciones.html">Cotizaciones</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="services.html">Servicios</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="cotizaciones.html">Cotizaciones</a></li>
+          <li><a href="menu.html">Menú</a></li>
         </ul>
       </div>
       <!-- Contacto -->
