09-01-25 17:15 | Etiquetas Meta y Arreglo Footer Index
Se implementaron las etiquetas "Meta" y se arregló el footer del index.html

--- a/pages/galeriasym.html
+++ b/pages/galeriasym.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Mira nuestras deliciosas pizzas en acción. Fotos de eventos, catering y mucho más en Salsa y Miga.">
+  <meta name="keywords" content="galería de fotos, Salsa y Miga, pizzas, catering, banquetes">
+  <meta name="author" content="Salsa y Miga">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Galería - Salsa y Miga">
+  <meta property="og:description" content="Explora nuestra galería de fotos y conoce más sobre nuestros deliciosos productos.">
+  <meta property="og:image" content="https://tusitio.github.io/img/galeria.jpg">
+  <meta property="og:url" content="https://tusitio.github.io/pages/galeriasym.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Galería - Salsa y Miga">
+  <meta name="twitter:description" content="Fotos de nuestras pizzas, eventos y catering. ¡Mira más!">
+  <meta name="twitter:image" content="https://tusitio.github.io/img/galeria.jpg">
+  
     <title>Salsa y Miga</title>
     
     <link rel="stylesheet" href="../styles/galeria/galeria-style.css">
