--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Consulta el menú de Salsa y Miga: Pizzas Salsa y Miga y Pizzas Especiales. ¡Descubre nuestras recetas únicas!">
+  <meta name="keywords" content="menú de pizzas, Salsa y Miga, pizzas especiales, pizzas artesanales">
+  <meta name="author" content="Salsa y Miga">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Menú - Salsa y Miga">
+  <meta property="og:description" content="Explora nuestro menú con una amplia selección de pizzas artesanales. ¡Te encantará!">
+  <meta property="og:image" content="https://tusitio.github.io/img/menu.jpg">
+  <meta property="og:url" content="https://tusitio.github.io/pages/menu.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Menú - Salsa y Miga">
+  <meta name="twitter:description" content="Descubre nuestras deliciosas pizzas en el menú de Salsa y Miga.">
+  <meta name="twitter:image" content="https://tusitio.github.io/img/menu.jpg">
+  
     <title>Salsa y Miga</title>
     
     <link rel="stylesheet" href="../styles/Menu/menu-style.css">
