--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Conoce la historia de Salsa y Miga: nuestra pasión por las pizzas artesanales y nuestro compromiso con la calidad.">
+  <meta name="keywords" content="Salsa y Miga, historia, pizzas artesanales, equipo, compromiso, calidad">
+  <meta name="author" content="Salsa y Miga">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Nosotros - Salsa y Miga">
+  <meta property="og:description" content="Descubre cómo empezamos y por qué amamos lo que hacemos. ¡Las mejores pizzas a domicilio!">
+  <meta property="og:image" content="https://tusitio.github.io/img/nosotros.jpg">
+  <meta property="og:url" content="https://tusitio.github.io/pages/nosotros.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nosotros - Salsa y Miga">
+  <meta name="twitter:description" content="Nuestra pasión por las pizzas artesanales y la calidad.">
+  <meta name="twitter:image" content="https://tusitio.github.io/img/nosotros.jpg">
+  
     <title>Salsa y Miga</title>
     
     <link rel="stylesheet" href="../styles/nosotros/nosotros-styles.css">
