--- a/pages/services.html
+++ b/pages/services.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Ofrecemos servicio de catering, pizzas artesanales a domicilio y banquetes personalizados. ¡Consulta nuestras opciones!">
+  <meta name="keywords" content="servicio de catering, banquetes, pizzas artesanales, Salsa y Miga, servicios personalizados">
+  <meta name="author" content="Salsa y Miga">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Servicios - Salsa y Miga">
+  <meta property="og:description" content="Catering y banquetes con nuestras pizzas artesanales. ¡Descubre nuestras opciones personalizadas!">
+  <meta property="og:image" content="https://tusitio.github.io/img/servicios.jpg">
+  <meta property="og:url" content="https://tusitio.github.io/pages/services.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Servicios - Salsa y Miga">
+  <meta name="twitter:description" content="Catering y banquetes con nuestras deliciosas pizzas artesanales.">
+  <meta name="twitter:image" content="https://tusitio.github.io/img/servicios.jpg">
+  
     <title>Salsa y Miga</title>
     
     <link rel="stylesheet" href="../styles/services/services-styles.css">
