--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PPM9KBKB');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ofrecemos servicio de catering, pizzas artesanales a domicilio y banquetes personalizados. ¡Consulta nuestras opciones!">
@@ -38,6 +45,10 @@
 
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PPM9KBKB"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <div class="desktop">
       <!-- Header -->
        <header class="header">
@@ -328,9 +339,6 @@
 
 
 
-
-
-
 <div class="movile">
   <!-- Header -->
   <header class="header-salsa">
@@ -564,17 +572,16 @@
       </section>
   
                <!-- Modal -->
-<div id="modal" class="modal">
-  <div class="modal-content">
-    <form>
-      <!-- Formulario de Google o tu contenido -->
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfMUIJldutif41Bjbcg7g2y7dzT4kRd2x-ND70ha7e2DaktQ/viewform?usp=header" title="google-form" width="100%" height="500px"></iframe>
-      <!-- Botón de cerrar -->
-      <button type="button" class="close-btn">Cerrar</button>
-    </form>
-  </div>
-</div>
-  
+               <div id="modal" class="modal">
+                <div class="modal-content">
+                  <form>
+                    <!-- Formulario de Google o tu contenido -->
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScfMUIJldutif41Bjbcg7g2y7dzT4kRd2x-ND70ha7e2DaktQ/viewform?usp=header" title="google-form" width="100%" height="500px"></iframe>
+                    <!-- Botón de cerrar -->
+                    <button type="button" class="close-btn">Cerrar</button>
+                  </form>
+                </div>
+              </div>
    <!-- Sección Preguntas -->
    <section id="faq" class="faq-section">
     <div class="container">
@@ -667,11 +674,12 @@
     </div>
   </footer>
   </div>
-  <script src="../js/script.js"></script>
-  <script src="../js/services-js.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+<script src="../js/script.js"></script>
+<script src="../js/services-js.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
 
 
