--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="pizzas artesanales, pizzas a domicilio, catering, Salsa y Miga, comida artesanal">
+  <meta name="keywords" content="catering de pizzas, banquetería italiana, proveedor gastronóico, pizzas artesanales, pizzas a domicilio, catering, Salsa y Miga, comida artesanal">
   <meta name="author" content="Salsa y Miga">
   <meta name="robots" content="index, follow">
-  <meta property="og:title" content="Salsa y Miga - Pizzas Artesanales">
-  <meta property="og:description" content="Disfruta de nuestras deliciosas pizzas artesanales preparadas con amor y calidad. ¡Haz tu pedido ahora!">
+  <meta property="og:title" content="Salsa y Miga - Catering de Pizzas">
+  <meta property="og:description" content="Disfruta de nuestras deliciosas pizzas napolitanas en tu hogar. ¡Haz tu cotización ahora!">
   <meta property="og:image" content="https://tusitio.github.io/img/logo.png">
   <meta property="og:url" content="https://tusitio.github.io/index.html">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Salsa y Miga - Pizzas Artesanales">
-  <meta name="twitter:description" content="Pizzas artesanales a domicilio. ¡Descubre nuestro menú!">
+  <meta name="twitter:title" content="Salsa y Miga - Catering profesional de Pizzas">
+  <meta name="twitter:description" content="Pizzas artesanales a domicilio. Catering Salsa y Miga ¡Descubre nuestro menú!">
   <meta name="twitter:image" content="https://tusitio.github.io/img/logo.png">
   
     <title>Salsa y Miga</title>
@@ -557,14 +557,14 @@
           </section>
   
              
-  
    <!-- Sección Preguntas -->
    <section id="faq" class="faq-section">
     <div class="container">
       <h2 class="section-title">Preguntas Frecuentes</h2>
   
       <div class="faq-item">
-        <button class="faq-question">¿Qué significa "Pizzas ilimitadas"? <span class="faq-icon">+</span></button>
+        
+        <button class="faq-question" id="faq-question">¿Qué significa "Pizzas ilimitadas"? <span class="faq-icon">+</span></button>
         <div class="faq-answer">
           <p>Seleccionando el plan completo, tienes la opción de disfrutar junto a tus invitados de todas las pizzas que desees durante el tiempo que estemos ahí. Primero hacemos una ronda de pizzas, luego un break y luego volvemos a servir nuevamente pizzas para todos aquellos que todavía tienen hambre.</p>
         </div>
@@ -630,6 +630,7 @@
   </section>
   
   
+  
   <!--Sección Footer-->
   <footer class="footer">
     <div class="footer-columns">
@@ -680,9 +681,11 @@
     </div>
   </footer>
   </div>
-  <script src="js/script.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+  
+<script src="../git/js/script.js" async></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </html>
 
 
