--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   gtag('config', 'G-PGM6XX7LRG');
 </script>
   <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="catering de pizzas, banquetería italiana, proveedor gastronóico, pizzas artesanales, pizzas a domicilio, catering, Salsa y Miga, comida artesanal">
   <meta name="author" content="Salsa y Miga">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="Salsa y Miga - Catering de Pizzas">
   <meta property="og:description" content="Disfruta de nuestras deliciosas pizzas napolitanas en tu hogar. ¡Haz tu cotización ahora!">
-  <meta property="og:image" content="https://tusitio.github.io/img/logo.png">
+  <meta property="og:image" content="Logo.png">
   <meta property="og:url" content="https://tusitio.github.io/index.html">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
@@ -684,7 +685,7 @@
 
 </body>
   
-<script src="../git/js/script.js" async></script>
+<script src="js/script.js" async></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </html>
 
