--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   gtag('config', 'G-PGM6XX7LRG');
 </script>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="Logo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="catering de pizzas, banquetería italiana, proveedor gastronóico, pizzas artesanales, pizzas a domicilio, catering, Salsa y Miga, comida artesanal">
   <meta name="author" content="Salsa y Miga">
