20-01-25 16:50 | Cambios menores en todo
Algunos cambios en robots.txt, cambios en etiquetas meta, y solución a favicon de todas las páginas.

--- a/pages/Entradas-Blog/plantilla-blog.html
+++ b/pages/Entradas-Blog/plantilla-blog.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../Logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Qué es un Servicio de Catering? | Salsa y Miga</title>
     <link rel="stylesheet" href="./style-entradas/que-es-un-servicio-de-catering.css">
@@ -41,7 +40,7 @@
                 </p>
             
                 <figure class="blog-image">
-                    <img src="../../img/imgss/v1.JPG" alt="Servicio de catering en evento corporativo" class="img-fluid rounded shadow">
+                    <img src="../img/blog/catering-service.jpg" alt="Servicio de catering en evento corporativo" class="img-fluid rounded shadow">
                     <figcaption>Un servicio de catering se adapta a tus necesidades para hacer de tu evento algo inolvidable.</figcaption>
                 </figure>
             
@@ -145,5 +144,4 @@
     </footer>
 </body>
 </html>
-
 
