--- a/pages/cotizaciones.html
+++ b/pages/cotizaciones.html
@@ -18,6 +18,7 @@
   gtag('config', 'G-PGM6XX7LRG');
 </script>
     <meta charset="UTF-8">
+    <link rel="icon" href="../Logo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salsa y Miga</title>
     
