--- a/pages/galeriasym.html
+++ b/pages/galeriasym.html
@@ -18,11 +18,11 @@
   gtag('config', 'G-PGM6XX7LRG');
 </script>
   <meta charset="UTF-8">
+  <link rel="icon" href="../Logo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Mira nuestras deliciosas pizzas en acción. Fotos de eventos, catering y mucho más en Salsa y Miga.">
   <meta name="keywords" content="galería de fotos, Salsa y Miga, pizzas, catering, banquetes">
   <meta name="author" content="Salsa y Miga">
-  <meta name="robots" content="index, follow">
   <meta property="og:title" content="Galería - Salsa y Miga">
   <meta property="og:description" content="Explora nuestra galería de fotos y conoce más sobre nuestros deliciosos productos.">
   <meta property="og:image" content="https://tusitio.github.io/img/galeria.jpg">
