--- a/pages/services.html
+++ b/pages/services.html
@@ -17,12 +17,13 @@
 
   gtag('config', 'G-PGM6XX7LRG');
 </script>
+<link rel="icon" href="../Logo.png" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Ofrecemos servicio de catering, pizzas artesanales a domicilio y banquetes personalizados. ¡Consulta nuestras opciones!">
   <meta name="keywords" content="servicio de catering, banquetes, pizzas artesanales, Salsa y Miga, servicios personalizados">
   <meta name="author" content="Salsa y Miga">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="noindex">
   <meta property="og:title" content="Servicios - Salsa y Miga">
   <meta property="og:description" content="Catering y banquetes con nuestras pizzas artesanales. ¡Descubre nuestras opciones personalizadas!">
   <meta property="og:image" content="https://tusitio.github.io/img/servicios.jpg">
