--- a/pages/socios.html
+++ b/pages/socios.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Únete al programa de socios de Salsa y Miga y disfruta de exclusivos descuentos en panadería, pizzería, eventos y mucho más.">
   <meta name="keywords" content="socios, descuentos, panadería, pizzería, eventos, reservas anticipadas">
   <title>Socios Exclusivos - Salsa y Miga</title>
-  
+  <link rel="icon" href="../Logo.png" type="image/x-icon">
   <link rel="stylesheet" href="../../git/recursos/footer.css">
     <link rel="stylesheet" href="../../git/recursos/footer-responsive.css">
 
