--- a/pages/menu.html
+++ b/pages/menu.html
@@ -17,6 +17,7 @@
 
   gtag('config', 'G-PGM6XX7LRG');
 </script>
+<link rel="icon" href="../Logo.png" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Consulta el menú de Salsa y Miga: Pizzas Salsa y Miga y Pizzas Especiales. ¡Descubre nuestras recetas únicas!">
