--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,6 +18,7 @@
   gtag('config', 'G-PGM6XX7LRG');
 </script>
   <meta charset="UTF-8">
+  <link rel="icon" href="../Logo.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Conoce la historia de Salsa y Miga: nuestra pasión por las pizzas artesanales y nuestro compromiso con la calidad.">
   <meta name="keywords" content="Salsa y Miga, historia, pizzas artesanales, equipo, compromiso, calidad">
