--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <meta name="twitter:title" content="Salsa y Miga - Catering profesional de Pizzas">
   <meta name="twitter:description" content="Pizzas artesanales a domicilio. Catering Salsa y Miga ¡Descubre nuestro menú!">
   <meta name="twitter:image" content="https://www.salsaymiga.cl/Logo.png">
-  
+  <link rel="canonical" href="https://www.salsaymiga.cl/index.html">
+
     <title>Salsa y Miga</title>
     
     <link rel="stylesheet" href="styles/index/styles.css">
