cambios muy menores

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <meta property="og:title" content="Salsa y Miga - Catering de Pizzas">
   <meta property="og:description" content="Disfruta de nuestras deliciosas pizzas napolitanas en tu hogar. ¡Haz tu cotización ahora! Nos especializamos en soluciones gastrónomicas para productores de eventos y banqueteras. ¡Somos parte de tus soluciones!">
   <meta property="og:image" content="Logo.png">
-  <meta property="og:url" content="https://www.salsaymiga.cl">
+  <meta property="og:url" content="http://www.salsaymiga.cl">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Salsa y Miga - Catering profesional de Pizzas">
   <meta name="twitter:description" content="Pizzas artesanales a domicilio. Catering Salsa y Miga ¡Descubre nuestro menú!">
-  <meta name="twitter:image" content="https://www.salsaymiga.cl/Logo.png">
-  <link rel="canonical" href="https://www.salsaymiga.cl/index.html">
+  <meta name="twitter:image" content="http://www.salsaymiga.cl/Logo.png">
+  <link rel="canonical" href="http://www.salsaymiga.cl/index.html">
 
     <title>Salsa y Miga</title>
     
