25-01-25 23:09 | Cambios en diseño
Cambios en diseño y estructura de los services

ahora en services.html está una imagen que acompaña a la información de los packs de eventos

lo mismo se ve en el index.

cambios en el navbar y logo

--- a/pages/galeriasym.html
+++ b/pages/galeriasym.html
@@ -58,7 +58,7 @@
       <!-- Header -->
       <header class="header">
         <div class="logo">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar">
           <ul>
@@ -74,7 +74,7 @@
       
       <header class="header-salsa">
         <div class="logo-salsa">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar-salsa">
           <!-- Botón para activar el menú móvil -->
