--- a/pages/menu.html
+++ b/pages/menu.html
@@ -60,7 +60,7 @@
        <!-- Header -->
        <header class="header">
         <div class="logo">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar">
           <ul>
@@ -76,7 +76,7 @@
       
       <header class="header-salsa">
         <div class="logo-salsa">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar-salsa">
           <!-- Botón para activar el menú móvil -->
@@ -97,7 +97,6 @@
           </div>
         </nav>
       </header>
-
    
 <section class="menu">
     <!-- Sección de Pizzas Salsa y Miga -->
