--- a/pages/services.html
+++ b/pages/services.html
@@ -60,7 +60,7 @@
     <!-- Header -->
     <header class="header">
       <div class="logo">
-        <h1>Salsa y Miga</h1>
+        <h1>Salsa&Miga</h1>
       </div>
       <nav class="navbar">
         <ul>
@@ -76,7 +76,7 @@
     
     <header class="header-salsa">
       <div class="logo-salsa">
-        <h1>Salsa y Miga</h1>
+        <h1>Salsa&Miga</h1>
       </div>
       <nav class="navbar-salsa">
         <!-- Botón para activar el menú móvil -->
@@ -110,13 +110,22 @@
 
     <section class="service-section">
     <h2 class="section-title">Packs de Eventos</h2>
+
+    <h4 class="section-description">
+      <p>Los packs de eventos son la opción más fácil, rápida y económica de contratar nuestros servicios. <br>
+      Para elegir tu selección de Pizzas, puedes escoger entre todas las opciones que se encuentran en nuestro <a href="menu.html">Menú</a>.<br> Ahí podrás encontrar nuestras alternativas gourmet para que nosotros las preparemos <strong>en vivo </strong>en tu evento. </a></p>
+    </h4>
     <div class="service-cards">
       <!-- Pack destacado -->
       <div class="service-card destacado">
+        <img src="../img/services/packs/90sym.svg" alt="Imagen del Pack 45 S&M" class="service-image">
         <span class="badge">Opción destacada</span>
         <span class="badge-2">Oferta Limitada</span>
         <h3>Pack 90 S&M</h3>
-        <p>Tu evento con 60 pizzas Salsa y Miga y 30 pizzas Premium. Selecciona 4 opciones de pizzas clásicas (saldrán 10 de cada una) y 2 variedades premium.</p>
+        <p><strong>60 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)
+<br><br>
+         <strong> 30 Pizzas Premium</strong> (2 variedades a elección del menú premium)
+          </p>
         <button class="btn-cotizar" onclick="openModal()">Pack 90 S&M | $9.300 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
@@ -125,11 +134,16 @@
   
       <!-- Pack destacado -->
       <div class="service-card destacado">
+        <img src="../img/services/packs/30classic.svg" alt="Imagen del Pack 45 S&M" class="service-image">
         <span class="badge">Opción destacada</span>
         <span class="badge-2">Oferta Limitada</span>
         <h3>Pack 30 Classic</h3>
-        <p>Tu evento con 30 pizzas Salsa y Miga. Menú: Capresse (Mozzarella, Pesto, Albahaca, Selección Cherry), Pepperoni (Mozzarella, American Pepperoni, Aceitunas), Osornina (Mozzarella, Rúcula, Prosciutto, Aceite de oliva CHEF, Queso Parmesano)</p>
-        <button class="btn-cotizar" onclick="openModal()">Pack 30 Classic | $9.300 (S/iva)</button>
+        <p>
+         <strong>10 Capresse</strong> - Mozzarella, Cherry, Albahaca, Oliva Chef <br>
+         <strong>10 Pepperoni</strong> - Mozzarella, American Pepperoni<br>
+         <strong>10 Osornina</strong> - Mozzarella, Rúcula, Prosciutto, Oliva Chef, Parmesano
+        </p>
+        <button class="btn-cotizar" onclick="openModal()">Pack 30| $9.600 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
@@ -137,10 +151,13 @@
   
       <!-- Pack destacado -->
       <div class="service-card destacado">
+        <img src="../img/services/packs/45sym.svg" alt="Imagen del Pack 45 S&M" class="service-image">
+        <h3>Pack 45 S&M</h3>
         <span class="badge">Más popular</span>
         <span class="badge-2">Oferta Limitada</span>
-        <h3>Pack 45 S&M</h3>
-        <p>Tu evento con 30 pizzas Salsa y Miga y 15 Premium. Tienes la opción de seleccionar hasta 4 variedades Salsa y Miga y 2 variedades Premium </p>
+        <p><strong>30 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)<br>
+
+        <strong> 15 Pizzas  Premium</strong> (2 variedades a elección del menú premium)</p>
         <button class="btn-cotizar" onclick="openModal()">Pack 45 S&M | $9.550 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
@@ -150,9 +167,10 @@
 
     <!-- Packs no destacados -->
     <div class="service-card">
+      <img src="../img/services/packs/60classic.svg" alt="Imagen del Pack 60 Classic" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 60 Classic</h3>
-      <p>Tu evento con 60 pizzas Salsa y Miga. Puedes elegir hasta 5 variedades del menú Salsa y Miga</p>
+      <p>Tu evento con <strong>60 pizzas Salsa&Miga</strong>. Puedes elegir hasta 5 variedades del menú Salsa y Miga</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 60 Classic | $9.200 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
@@ -160,82 +178,102 @@
     </div>
 
     <div class="service-card">
+      <img src="../img/services/packs/80classic.svg" alt="Imagen del Pack 80 Classic" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 80 Classic</h3>
-      <p>Tu evento con 80 pizzas Salsa y Miga. Escoge hasta 4 variedades para crear el menú de tu evento. Saldrán 20 pizzas de cada una de tus selecciones</p>
+      <p>Tu evento con <strong>80 pizzas Salsa&Miga</strong>. Puedes elegir hasta 5 variedades del menú Salsa y Miga</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 80 Classic | $9.200 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/140classic.svg" alt="Imagen del Pack 140 Classic" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 140 Classic</h3>
-      <p>Tu evento con 140 pizzas Salsa y Miga. Escoge hasta 5 variedades para crear el menú de tu evento.</p>
+      <p>Tu evento con <strong>140 pizzas Salsa&Miga</strong>. Puedes elegir hasta 5 variedades del menú Salsa y Miga      </p>
       <button class="btn-cotizar" onclick="openModal()">Pack 140 Classic | $8.600 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/200classic.svg" alt="Imagen del Pack 200 Clasic" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 200 Classic</h3>
-      <p>Tu evento con 200 pizzas Salsa y Miga. Escoge hasta 6 variedades para crear el menú de tu evento de nuestra carta Salsa y Miga</p>
+      <p>Tu evento con <strong>200 pizzas Salsa&Miga</strong>. Puedes elegir hasta 6 variedades del menú Salsa y Miga</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 200 Classic | $8.500 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/30sym.svg" alt="Imagen del Pack 30 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 30 S&M</h3>
-      <p>Tu evento con 30 pizzas Salsa y Miga. Saldrán 10 Pizzas Premium y 20 Pizzas Salsa y Miga. Escoge hasta 4 variedades de nuestro menú Salsa y Miga y 1 variedades Premium para que sirvamos en tu evento.</p>
-      <button class="btn-cotizar" onclick="openModal()">Pack 30 S&M | $9.550 (S/iva)</button>
+      <p><strong>20 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)<br>
+
+       <strong> 10 Pizzas Premium </strong> (2 variedades a elección del menú premium)
+        </p>
+      <button class="btn-cotizar" onclick="openModal()">Pack 30 S&M | $9.800 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/60sym.svg" alt="Imagen del Pack 60 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 60 S&M</h3>
-      <p>Tu evento con 60 pizzas Salsa y Miga. Escoge hasta 4 variedades de nuestro menú Salsa y Miga y 2 variedades Premium para que sirvamos en tu evento.</p>
+      <p><strong>40 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)<br>
+
+        <strong>20 Pizzas  Premium </strong>(2 variedades a elección del menú premium)</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 60 S&M | $9.400 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/80sym.svg" alt="Imagen del Pack 80 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 80 S&M</h3>
-      <p>Tu evento con 60 pizzas Salsa y Miga y 20 pizzas Premium. Escoge hasta 4 variedades de nuestro menú Salsa y Miga y 2 variedades Premium para que sirvamos en tu evento.</p>
-      <button class="btn-cotizar" onclick="openModal()">Pack 80 S&M | $9.400 (S/iva)</button>
+      <p><strong>40 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)<br>
+
+       <strong> 40 Pizzas  Premium </strong>(2 variedades a elección del menú premium)</p>
+      <button class="btn-cotizar" onclick="openModal()">Pack 80 S&M | $9.300 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/140sym.svg" alt="Imagen del Pack 140 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 140 S&M</h3>
-      <p>Tu evento con 100 pizzas Salsa y Miga y 40 pizzas Premium. Escoge hasta 4 variedades de nuestro menú Salsa y Miga y 2 variedades Premium para que sirvamos en tu evento.</p>
+      <p><strong>80 Pizzas Salsa&Miga </strong>(4 variedades a elección del menú Salsa&Miga)<br>
+
+       <strong> 60 Pizzas  Premium</strong> (2 variedades a elección del menú premium)</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 140 S&M | $9.100 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/services/packs/200sym.svg" alt="Imagen del Pack 200 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack 200 S&M</h3>
-      <p>Tu evento con 200 pizzas Salsa y Miga. Escoge hasta 5 variedades de nuestro menú Salsa y Miga y 2 variedades Premium para que sirvamos en tu evento.</p>
+      <p><strong>140 Pizzas Salsa&Miga</strong> (5 variedades a elección del menú Salsa&Miga)<br>
+
+        <strong>60 Pizzas  Premium </strong>(2 variedades a elección del menú premium)</p>
       <button class="btn-cotizar" onclick="openModal()">Pack 200 S&M | $8.950 (S/iva)</button>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
     </div>
     <div class="service-card">
+      <img src="../img/imgss/H1.jpg" alt="Imagen del Pack 45 S&M" class="service-image">
       <span class="badge-2">Oferta Limitada</span>
       <h3>Pack Personalizado</h3>
       <span class="badge">Selección Especial</span>
-      <p>Tu evento, tus reglas. Personaliza todo tu evento. Selecciona todas las pizzas que quieras de nuestro menú Salsa y Miga por $11.000 y todo el menú Premium desde $14.000. ¡Desde las 20! (Descuentos por cantidad)</p>
+      <p>Tu evento, tus reglas. Personaliza todo tu evento. Selecciona todas las pizzas que quieras de nuestro menú Salsa y Miga por $10.000 y todo el menú Premium desde $12.000. ¡Desde las 20! (Descuentos por cantidad)</p>
       <div class="service-buttons">
         <a href="https://wa.me/56991999301?text=Hola, estoy interesado en el servicio de Catering para Eventos" rel="noopener noreferrer" target="_blank" class="whatsapp-button">WhatsApp</a>
     </div>
