--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -61,7 +61,7 @@
       <!-- Header -->
       <header class="header">
         <div class="logo">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar">
           <ul>
@@ -77,7 +77,7 @@
       
       <header class="header-salsa">
         <div class="logo-salsa">
-          <h1>Salsa y Miga</h1>
+          <h1>Salsa&Miga</h1>
         </div>
         <nav class="navbar-salsa">
           <!-- Botón para activar el menú móvil -->
